--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+# 2014-11-09
+	* Version 2.0.0
+	* Restruct the Application
+	* Using aes_cbc128 to encryt data
+
 # 2013-07-08
 	*	Make project as an OTP Application
 
